--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <spring.version>4.2.4.RELEASE</spring.version>
         <slf4j.version>1.7.16</slf4j.version>
+        <swagger.version>1.5.7</swagger.version>
     </properties>
 
     <dependencies>
@@ -91,6 +92,16 @@
             <artifactId>jackson-datatype-hibernate5</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -108,6 +119,7 @@
                 <version>2.3</version>
                 <configuration>
                     <webXml>webapp/WEB-INF/web.xml</webXml>
+                    <webappDirectory>webapp</webappDirectory>
                 </configuration>
             </plugin>
         </plugins>
