--- a/env/vm.properties
+++ b/env/vm.properties
@@ -5,3 +5,5 @@ vm_db_host=localhost
 db_service=shop
 db_username=shop
 db_password=password
+db_backup_name=backup.tar.gz
+db_data_location="/var/lib/postgresql/9.1/main"
