Fix DB setup scripts

--- a/env/vm.properties
+++ b/env/vm.properties
@@ -6,4 +6,5 @@ db_service=shop
 db_username=shop
 db_password=password
 db_backup_name=backup.tar.gz
-db_data_location="/var/lib/postgresql/9.1/main"
+db_config_location="/etc/postgresql/9.4/main"
+db_data_location="/var/lib/postgresql/9.4/main"
