Add separate DB schema for running tests

--- a/env/vm.properties
+++ b/env/vm.properties
@@ -5,6 +5,11 @@ vm_db_host=localhost
 db_service=shop
 db_username=shop
 db_password=password
+
+db_test_service=shop_test
+db_test_username=shop_test
+db_test_password=password
+
 db_backup_name=backup.tar.gz
 db_config_location="/etc/postgresql/9.4/main"
 db_data_location="/var/lib/postgresql/9.4/main"
