--- a/src/test/resources/test-database.properties
+++ b/src/test/resources/test-database.properties
@@ -1,10 +1,10 @@
 jdbc.driverClassName = org.postgresql.Driver
-jdbc.url = jdbc:postgresql://localhost:5432/shop
-jdbc.username = shop
+jdbc.url = jdbc:postgresql://localhost:5432/shop_test
+jdbc.username = shop_test
 jdbc.password = password
 jdbc.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-migration.schemas = shop
+migration.schemas = shop_test
 migration.location = classpath:/database
 migration.baseline = 1
 migration.prefix =
