Make Swagger UI customizable

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,4 +6,4 @@ springfox.documentation.swagger.v2.termsOfServiceUrl=
 springfox.documentation.swagger.v2.contact=
 springfox.documentation.swagger.v2.license=
 springfox.documentation.swagger.v2.licenseUrl=
-springfox.documentation.swagger.v2.path=/rest/api-docs
+springfox.documentation.swagger.v2.path=/api-docs
