--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <spring.version>4.2.4.RELEASE</spring.version>
         <slf4j.version>1.7.16</slf4j.version>
         <swagger.version>1.5.7</swagger.version>
+        <spring.security.version>4.1.0.RELEASE</spring.security.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,21 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
