Disable Travis CI notifiactions

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ services:
   - postgresql
 before_script:
   - psql -c "create database shop_test;" -U postgres
-  - psql -c "create user shop_test with password 'password';"  -U postgres
-  - psql -c "grant all privileges on database shop_test to shop_test;"  -U postgres
+  - psql -c "create user shop_test with password 'password';" -U postgres
+  - psql -c "grant all privileges on database shop_test to shop_test;" -U postgres
+notifications:
+  email: false
