--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=by.kachanov.shop
 sonar.projectName=pet-shop
 sonar.sources=src
+sonar.exclusions=src/main/webapp/rest,src/main/webapp/web/js/lib
