--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     </dependencies>
 
     <build>
+        <finalName>shop</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
