Change logging level to INFO

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 logs.dir=${catalina.base}/logs
-log4j.rootLogger=TRACE, console, shop
+log4j.rootLogger=INFO, console, shop
 log4j.org.springframework=ERROR, console
 
 log4j.additivity.by.kachanov.shop = false
