--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.junit-toolbox</groupId>
+            <artifactId>junit-toolbox</artifactId>
+            <version>1.5</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
