--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,15 @@ before_script:
   - psql -c "create database shop_test;" -U postgres
   - psql -c "create user shop_test with password 'password';" -U postgres
   - psql -c "grant all privileges on database shop_test to shop_test;" -U postgres
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
 script:
-  - mvn test
+  - ./gradlew test
   - sonar-scanner -Dsonar.login=$SONAR_TOKEN
 notifications:
   email:
