--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.projectKey=by.kachanov.shop
 sonar.projectName=pet-shop
 sonar.sources=src
+sonar.java.binaries=build/classes/java/main
+sonar.java.test.binaries=build/classes/java/test
 sonar.exclusions=src/main/webapp/rest/**/*,src/main/webapp/web/js/lib/**/*
