--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.sources=src
 sonar.java.binaries=build/classes/java/main
 sonar.java.test.binaries=build/classes/java/test
 sonar.exclusions=src/main/webapp/rest/**/*,src/main/webapp/web/js/lib/**/*
+sonar.jacoco.reportPaths=build/jacoco/test.exec
