Exclude test classes from overage report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.java.binaries=build/classes/java/main
 sonar.java.test.binaries=build/classes/java/test
 sonar.exclusions=src/main/webapp/rest/**/*,src/main/webapp/web/js/lib/**/*
 sonar.jacoco.reportPaths=build/jacoco/test.exec
+sonar.coverage.exclusions=src/test/**
