--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'jacoco'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
 import com.bmuschko.gradle.docker.tasks.container.*
+import com.bmuschko.gradle.docker.tasks.image.*
 
 group = 'by.kachanov'
 version = 1.0
@@ -52,14 +53,18 @@ dependencies {
     testCompile "javax.servlet:javax.servlet-api:3.0.1"
 }
 
-task createTestDb(type: DockerCreateContainer) {
+task pullDbImage(type: DockerPullImage) {
+    repository 'postgres'
+    tag 'alpine'
+}
+
+task createTestDb(type: DockerCreateContainer, dependsOn: pullDbImage) {
     imageId = 'postgres:alpine'
     portBindings = ['5432:5432']
     env = ['POSTGRES_DB=shop_test', 'POSTGRES_USER=shop_test', 'POSTGRES_PASSWORD=password']
 }
 
-task startTestDb(type: DockerStartContainer) {
-    dependsOn createTestDb
+task startTestDb(type: DockerStartContainer, dependsOn: createTestDb) {
     targetContainerId { createTestDb.getContainerId() }
 }
 
@@ -67,8 +72,7 @@ task stopTestDb(type: DockerStopContainer) {
     targetContainerId { createTestDb.getContainerId() }
 }
 
-task destroyTestDb(type: DockerRemoveContainer) {
-    dependsOn stopTestDb
+task destroyTestDb(type: DockerRemoveContainer, dependsOn: stopTestDb) {
     targetContainerId { createTestDb.getContainerId() }
 }
 
