--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,15 @@
 sonar.projectKey=by.kachanov.shop
 sonar.projectName=pet-shop
+sonar.modules=pet-shop-dto,pet-shop-repository-api,pet-shop-repository-impl,pet-shop-service-api,pet-shop-service-impl,pet-shop-converter,pet-shop-web
 sonar.sources=src
 sonar.java.binaries=build/classes/java/main
 sonar.java.test.binaries=build/classes/java/test
 sonar.exclusions=src/main/webapp/rest/**/*,src/main/webapp/web/js/lib/**/*
 sonar.jacoco.reportPaths=build/jacoco/test.exec
 sonar.coverage.exclusions=src/test/**
+
+pet-shop-repository-api.projectBaseDir=pet-shop-repository/pet-shop-repository-api
+pet-shop-repository-impl.projectBaseDir=pet-shop-repository/pet-shop-repository-impl
+pet-shop-service-api.projectBaseDir=pet-shop-service/pet-shop-service-api
+pet-shop-service-impl.projectBaseDir=pet-shop-service/pet-shop-service-impl
+pet-shop-converter.projectBaseDir=pet-shop-service/pet-shop-converter
