Update Sonar configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,8 +8,8 @@ sonar.exclusions=src/main/webapp/rest/**/*,src/main/webapp/web/js/lib/**/*
 sonar.jacoco.reportPaths=build/jacoco/test.exec
 sonar.coverage.exclusions=src/test/**
 
-pet-shop-repository-api.projectBaseDir=pet-shop-repository/pet-shop-repository-api
-pet-shop-repository-impl.projectBaseDir=pet-shop-repository/pet-shop-repository-impl
-pet-shop-service-api.projectBaseDir=pet-shop-service/pet-shop-service-api
-pet-shop-service-impl.projectBaseDir=pet-shop-service/pet-shop-service-impl
-pet-shop-converter.projectBaseDir=pet-shop-service/pet-shop-converter
+pet-shop-repository-api.sonar.projectBaseDir=pet-shop-repository/pet-shop-repository-api
+pet-shop-repository-impl.sonar.projectBaseDir=pet-shop-repository/pet-shop-repository-impl
+pet-shop-service-api.sonar.projectBaseDir=pet-shop-service/pet-shop-service-api
+pet-shop-service-impl.sonar.projectBaseDir=pet-shop-service/pet-shop-service-impl
+pet-shop-converter.sonar.projectBaseDir=pet-shop-service/pet-shop-converter
