--- a/pet-shop-repository/pet-shop-repository-impl/build.gradle
+++ b/pet-shop-repository/pet-shop-repository-impl/build.gradle
@@ -8,4 +8,10 @@ dependencies {
 
     compile project(":pet-shop-repository:pet-shop-repository-api")
     compile project(":pet-shop-service:pet-shop-converter")
+
+    testCompile "junit:junit:4.12"
+    testCompile "org.springframework:spring-test:${springVersion}"
+    testCompile "org.hsqldb:hsqldb:2.3.3"
+
+    testCompile project(":pet-shop-service:pet-shop-service-impl")
 }
