--- a/pet-shop-web/build.gradle
+++ b/pet-shop-web/build.gradle
@@ -19,9 +19,9 @@ dependencies {
     compile "org.slf4j:slf4j-api:${slf4jVersion}"
     compile "org.slf4j:slf4j-log4j12:${slf4jVersion}"
     compile "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.7.1"
-    compile "io.springfox:springfox-swagger2:${swaggerVersion}"
 
     compile project(":pet-shop-service:pet-shop-service-impl")
+    compile project(":pet-shop-ui:pet-shop-ui-rest")
 
     testCompile "junit:junit:4.12"
     testCompile "org.springframework:spring-test:${springVersion}"
@@ -57,8 +57,14 @@ if (project.hasProperty('testProfile') && project.testProfile == 'docker') {
     test.finalizedBy destroyTestDb
 }
 
+def uiProjectsGroup = project(":pet-shop-ui")
+
+uiProjectsGroup.subprojects.each {
+    project.evaluationDependsOn ":" + uiProjectsGroup.name + ":" + it.name
+}
+
 war {
-    project(":pet-shop-ui").subprojects.each {
-        from files(it.sourceSets.main.resources)
+    uiProjectsGroup.subprojects.each {
+        from files(it.sourceSets.content.resources)
     }
 }
