Exclude dto module from coverage report

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,5 @@ pet-shop-repository-impl.sonar.projectBaseDir=pet-shop-repository/pet-shop-repos
 pet-shop-service-api.sonar.projectBaseDir=pet-shop-service/pet-shop-service-api
 pet-shop-service-impl.sonar.projectBaseDir=pet-shop-service/pet-shop-service-impl
 pet-shop-converter.sonar.projectBaseDir=pet-shop-service/pet-shop-converter
+
+pet-shop-dto.sonar.coverage.exclusions=src/**
