Build REST UI with npm

--- a/pet-shop-ui/pet-shop-ui-rest/build.gradle
+++ b/pet-shop-ui/pet-shop-ui-rest/build.gradle
@@ -1,8 +1,37 @@
+plugins {
+    id 'com.moowork.node' version '1.2.0'
+}
+
+def contentBaseDir = "${project.projectDir}/src/content"
+
 sourceSets {
-    content
+    content {
+        resources {
+            srcDirs = ["${contentBaseDir}/dist"]
+        }
+    }
 }
 
 dependencies {
     compile "org.springframework:spring-webmvc:${springVersion}"
     compile "io.springfox:springfox-swagger2:${swaggerVersion}"
+}
+
+node {
+    version = '6.9.5'
+    npmVersion = '5.7.1'
+    npmWorkDir = file("${project.buildDir}/npm")
+    nodeModulesDir = file(contentBaseDir)
+}
+
+task installDeps(type: NpmTask) {
+    args = ['install']
+}
+
+task buildJs(type: NpmTask, dependsOn: installDeps) {
+    args = ['run', 'prod']
+}
+
+if (Boolean.valueOf(buildUi)) {
+    processResources.dependsOn buildJs
 }
