--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ hibernateVersion = 5.0.1.Final
 flywayVersion = 3.2.1
 slf4jVersion = 1.7.16
 swaggerVersion = 2.2.2
+rsqlVersion = 2.1.0
+junitVersion = 4.12
 
 buildUi = false
 buildUiProfile = prod
