--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include ':pet-shop-dto',
         ':pet-shop-service:pet-shop-service-api',
         ':pet-shop-service:pet-shop-service-impl',
         ':pet-shop-service:pet-shop-converter',
+        ':pet-shop-service:pet-shop-rsql',
         ':pet-shop-repository:pet-shop-repository-api',
         ':pet-shop-repository:pet-shop-repository-impl',
         ':pet-shop-web',
