--- a/pet-shop-service/pet-shop-rsql/build.gradle
+++ b/pet-shop-service/pet-shop-rsql/build.gradle
@@ -1,12 +1,9 @@
 dependencies {
     compile "org.springframework:spring-context:${springVersion}"
-    compile "org.hibernate:hibernate-core:${hibernateVersion}"
-
+    compile "cz.jirutka.rsql:rsql-parser:${rsqlVersion}"
     compile project(":pet-shop-dto")
 
     testCompile "junit:junit:${junitVersion}"
+    testCompile "org.easytesting:fest-assert:1.4"
     testCompile "org.springframework:spring-test:${springVersion}"
-    testCompile "org.hsqldb:hsqldb:2.3.3"
-
-    testCompile project(":pet-shop-service:pet-shop-service-impl")
 }
