--- a/pet-shop-ui/src/main/resources/swagger.properties
+++ b/pet-shop-ui/src/main/resources/swagger.properties
@@ -1,4 +1,4 @@
-springfox.documentation.swagger.v2.pathMapping=/rest
+springfox.documentation.swagger.v2.pathMapping=/
 springfox.documentation.swagger.v2.title=
 springfox.documentation.swagger.v2.description=
 springfox.documentation.swagger.v2.version=v1
@@ -6,4 +6,4 @@ springfox.documentation.swagger.v2.termsOfServiceUrl=
 springfox.documentation.swagger.v2.contact=
 springfox.documentation.swagger.v2.license=
 springfox.documentation.swagger.v2.licenseUrl=
-springfox.documentation.swagger.v2.path=/api-docs
+springfox.documentation.swagger.v2.path=/rest/api-docs
