--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,12 @@
-springVersion = 4.2.4.RELEASE
-hibernateVersion = 5.0.1.Final
-flywayVersion = 3.2.1
+springVersion = 5.0.4.RELEASE
+springBootVersion = 2.0.0.RELEASE
+hibernateVersion = 5.2.14.Final
+flywayVersion = 5.0.7
 slf4jVersion = 1.7.16
-swaggerVersion = 2.2.2
+swaggerVersion = 2.8.0
 rsqlVersion = 2.1.0
 junitVersion = 4.12
+hsqlVersion=2.4.0
 
 buildUi = false
 buildUiProfile = prod
