--- a/pet-shop-repository/pet-shop-repository-impl/build.gradle
+++ b/pet-shop-repository/pet-shop-repository-impl/build.gradle
@@ -1,17 +1,14 @@
 dependencies {
-    compile "org.springframework:spring-context:${springVersion}"
-    compile "org.springframework:spring-tx:${springVersion}"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
     compile "org.hibernate:hibernate-core:${hibernateVersion}"
-    compile "org.springframework:spring-jdbc:${springVersion}"
-    compile "org.springframework:spring-orm:${springVersion}"
-    compile "postgresql:postgresql:9.1-901-1.jdbc4"
+    compile "org.postgresql:postgresql:42.1.3"
 
     compile project(":pet-shop-repository:pet-shop-repository-api")
     compile project(":pet-shop-service:pet-shop-converter")
 
     testCompile "junit:junit:${junitVersion}"
-    testCompile "org.springframework:spring-test:${springVersion}"
-    testCompile "org.hsqldb:hsqldb:2.3.3"
+    testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+    testCompile "org.hsqldb:hsqldb:${hsqlVersion}"
 
     testCompile project(":pet-shop-service:pet-shop-service-impl")
 }
