Add RSQL to JPA Criteria converter module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,6 @@ include ':pet-shop-dto',
         ':pet-shop-repository:pet-shop-repository-api',
         ':pet-shop-repository:pet-shop-repository-impl',
         ':pet-shop-web',
-        ':pet-shop-ui'
+        ':pet-shop-ui',
+        ':pet-shop-rsql-jpa'
+
