Fix Sonar configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=by.kachanov.shop
 sonar.projectName=pet-shop
-sonar.modules=pet-shop-dto,pet-shop-repository,pet-shop-specification,pet-shop-service-api,pet-shop-service-impl,pet-shop-web
+sonar.modules=pet-shop-dto,pet-shop-repository,pet-shop-rsql-specification,pet-shop-service-api,pet-shop-service-impl,pet-shop-web
 sonar.sources=src
 sonar.java.binaries=build/classes/java/main
 sonar.java.test.binaries=build/classes/java/test
@@ -10,6 +10,6 @@ sonar.coverage.exclusions=src/test/**
 
 pet-shop-service-api.sonar.projectBaseDir=pet-shop-service/pet-shop-service-api
 pet-shop-service-impl.sonar.projectBaseDir=pet-shop-service/pet-shop-service-impl
-pet-shop-specification.sonar.projectBaseDir=pet-shop-service/pet-shop-specification
+pet-shop-rsql-specification.sonar.projectBaseDir=pet-shop-service/pet-shop-rsql-specification
 
 pet-shop-dto.sonar.coverage.exclusions=src/**
