Get rid of deprecated Swagger ApiInfo constructor

--- a/pet-shop-ui/src/main/resources/swagger.properties
+++ b/pet-shop-ui/src/main/resources/swagger.properties
@@ -3,7 +3,9 @@ springfox.documentation.swagger.v2.title=
 springfox.documentation.swagger.v2.description=
 springfox.documentation.swagger.v2.version=v1
 springfox.documentation.swagger.v2.termsOfServiceUrl=
-springfox.documentation.swagger.v2.contact=
+springfox.documentation.swagger.v2.contact.name=
+springfox.documentation.swagger.v2.contact.url=
+springfox.documentation.swagger.v2.contact.email=
 springfox.documentation.swagger.v2.license=
 springfox.documentation.swagger.v2.licenseUrl=
 springfox.documentation.swagger.v2.path=/rest/api-docs
