Make test DB port configurable

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ subprojects {
     }
 
     test {
+        systemProperty 'test.database.port', "${defaultTestDbPort}"
         useJUnitPlatform()
     }
 }
