Fix Nginx configuration

--- a/pet-shop-ui/src/content/nginx/default.conf
+++ b/pet-shop-ui/src/content/nginx/default.conf
@@ -3,8 +3,6 @@ server {
   listen 80;
   server_name localhost;
 
-  error_log /var/log/nginx/err.log debug;
-
   location ~ ^/rest/([^.?]*?)(\?.*)?$ {
     index nothing_will_match;
     proxy_pass http://pet-shop-web:9090;
@@ -12,7 +10,7 @@ server {
 
   location / {
     root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    index  index.html;
   }
 
 }
