--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
         gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.bmuschko:gradle-docker-plugin:3.2.3'
+        classpath 'com.bmuschko:gradle-docker-plugin:4.2.0'
+        classpath 'com.aries:docker-java-shaded:3.1.0-rc-5'
         classpath 'io.franzbecker:gradle-lombok:1.14'
     }
 }
@@ -22,13 +23,13 @@ subprojects {
     if (System.getProperty("os.name").toLowerCase(Locale.ENGLISH).contains('windows')
             && Float.valueOf(System.getProperty("os.version")) < 10) {
         docker {
-            url 'tcp://192.168.99.100:2376'
-            certPath file(System.getProperty("user.home") + '\\.docker\\machine\\certs')
+            url = 'tcp://192.168.99.100:2376'
+            certPath = file(System.getProperty("user.home") + '\\.docker\\machine\\certs')
         }
     }
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = 1.11
+    targetCompatibility = 1.11
 
     repositories {
         mavenCentral()
